# Autonomous-Car-Simulation

./: .gitignore
autonomous_driving/: .gitignore  README.md  main.py  package.xml  requirements.txt  setup.cfg  setup.py  setup_project.py  tools_generate_town10_mission.py
autonomous_driving/configs/: data_bdd.yaml  manual_stoplines_town03.json  manual_stoplines_town03.json.BACKUP_DOWNHILL_STOPLINE_SPEED_FIX_20260527_235711  manual_stoplines_town03.json.BACKUP_STOPLINE_MATCH_FIX_20260527_233908  manual_stoplines_town03.json.BACKUP_STOP_2M_BEFORE_LINE_FIX_20260528_003742
autonomous_driving/launch/: teknofest_carla_full.launch.py  teknofest_carla_full.launch.py.BACKUP_DOWNHILL_STOPLINE_SPEED_FIX_20260527_235711  teknofest_carla_full.launch.py.BACKUP_FIX_TL_ROI_ENV_20260527_204835  teknofest_carla_full.launch.py.BACKUP_GREEN_RELEASE_STABILITY_20260527_215719  teknofest_carla_full.launch.py.BACKUP_REJECT_FAR_SMALL_RED_20260527_212612  teknofest_carla_full.launch.py.BACKUP_TL_GREEN_OVERRIDE_20260527_051711  teknofest_carla_full.launch.py.BACKUP_TL_RED_GREEN_FINAL_FIX_20260527_214713  teknofest_sign_static_test.launch.py
autonomous_driving/missions/: teknofest_round3.geojson  teknofest_round3_town10_current.geojson  teknofest_town03_competition_full.geojson  teknofest_town03_competition_full_v2_stable.geojson  teknofest_town03_competition_tunnel.geojson  teknofest_town03_competition_v3_safe.STABLE.geojson  teknofest_town03_competition_v4_extended.geojson  teknofest_town03_competition_v4_tasks_only.geojson  teknofest_town03_dev.geojson  town03_competition_v4_sign_plan.json  (+1 more)
(+177 files in other folders)
