<?xml version="1.0"?>
<package format="3">
  <name>autonomous_driving</name>
  <version>0.1.0</version>
  <description>TEKNOFEST Robotaksi CARLA simulation, perception, decision and control package</description>

  <maintainer email="ilker.akbal4822@gop.edu.tr">Ilker Akbal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>